fix too small lines

--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -149,6 +149,7 @@
 		overflow-x: hidden;
 		display: block;
 		overflow: hidden;
+		line-height: @snippetTitleFontSize + 3px;
 	}
 
 	img {
